--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.glassfish.web</groupId>
             <artifactId>jakarta.servlet.jsp.jstl</artifactId>
-            <version>2.0.0-M1</version>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.bb</groupId>
