--- a/data/pom.xml
+++ b/data/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>spring-orm</artifactId>
             <version>5.3.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.6.0</version>
+        </dependency>
     </dependencies>
 
 
