--- a/ui/src/main/resources/validation.properties
+++ b/ui/src/main/resources/validation.properties
@@ -1,5 +1,6 @@
-Required=This field is required.
-Size.userForm.login=Login must be between 4 and 8 characters.
-Duplicate.userForm.login=Such login already exists.
-Size.userForm.password=Password must contain.
-Different.userForm.password=Email don't match.
+main.required=This field is required.
+main.size.userForm.login=Login must be between 4 and 8 characters.
+main.duplicate.userForm.login=Such login already exists.
+main.size.userForm.password=Password must contain.
+main.different.userForm.password=Email don't match.
+
